--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                 <!-- Start ColorCubes -->
                 <div class="row">
                     <div class="col">
-                        <div id="color-cubes-container" class="container d-none">
+                        <div id="color-cubes-container" class="container mt-5 d-none">
                             <div class="row">
                                 <div id="color-cubes-0" class="col-3 p-2"></div>
                                 <div id="color-cubes-1" class="col-3 p-2"></div>
@@ -99,7 +99,7 @@
                 <div id="app-store-badges" class="row d-none">
                     <div class="col">
                         <div class="position-relative">
-                            <div class="w-100 mt-5 mb-5">
+                            <div class="w-100 mt-5">
                                 <div class="text-center mb-4">
                                     <span class="px-1">
                                         <a class="link-underline link-underline-opacity-0" href="https://apps.apple.com/us/app/transit-alarm-for-mta/id6736602401" title="Download Transit Alarm for MTA on the Apple App Store" target="_blank">
