Remove unnecessary mt-5 from ColorCubes

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                 <!-- Start ColorCubes -->
                 <div class="row">
                     <div class="col">
-                        <div id="color-cubes-container" class="container mt-5 d-none">
+                        <div id="color-cubes-container" class="container d-none">
                             <div class="row">
                                 <div id="color-cubes-0" class="col-3 p-2"></div>
                                 <div id="color-cubes-1" class="col-3 p-2"></div>
