--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
                 <div id="app-store-badges" class="row d-none">
                     <div class="col">
                         <div class="position-relative">
-                            <div class="w-100 mt-5 mb-5">
+                            <div class="w-100 mt-5">
                                 <div class="text-center mb-4">
                                     <span class="px-1">
                                         <a class="link-underline link-underline-opacity-0" href="https://apps.apple.com/us/app/transit-alarm-for-mta/id6736602401" title="Download Transit Alarm for MTA on the Apple App Store" target="_blank">
