Show current distance from destination on page when alarm is set

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
                         <div class="position-relative">
                             <div class="mt-3 text-center">
                                 <h5 class="mb-2">Transit Alarm for MTA</h5>
-                                <p class="px-4">Set an alarm to be notified when you're approaching your destination.</p>
+                                <p id="transit-alarm-subtitle" class="px-4">Set an alarm to be notified when you're approaching your destination.</p>
                             </div>
                             <div id="transit-alarm-controls-form-container" class="mt-4 d-none">
                                 <form>
